@@ -16,14 +16,17 @@
 
 package com.badlogic.gdx.backends.lwjgl;
 
+import java.io.File;
+
 import com.badlogic.gdx.Files;
 import com.badlogic.gdx.files.FileHandle;
 
 /** @author mzechner
  * @author Nathan Sweet */
 public final class LwjglFiles implements Files {
-	static public final String externalPath = System.getProperty("user.home") + "/";
-
+	static public final String externalPath = System.getProperty("user.home") + File.separator;
+	static public final String localPath = new File("").getAbsolutePath() + File.separator;
+	
 	@Override
 	public FileHandle getFileHandle (String fileName, FileType type) {
 		return new LwjglFileHandle(fileName, type);
@@ -66,7 +69,7 @@ public final class LwjglFiles implements Files {
 
 	@Override
 	public String getLocalStoragePath () {
-		return "";
+		return localPath;
 	}
 
 	@Override
